Bug 114258 - BASIC: Bad select after scrolling in Object Catalog
Summary: BASIC: Bad select after scrolling in Object Catalog
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: x86-64 (AMD64) All
: lowest trivial
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.0.0 target:6.4.5
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2017-12-05 11:44 UTC by Kamil Landa
Modified: 2020-05-21 11:29 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
process step-by-step (142.60 KB, image/png)
2017-12-05 11:44 UTC, Kamil Landa
Details
ODT with long list of macros, and video with bug (1.59 MB, application/x-zip-compressed)
2020-05-12 10:00 UTC, Kamil Landa
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kamil Landa 2017-12-05 11:44:50 UTC
Created attachment 138224 [details]
process step-by-step

1) In BASIC in the Object Catalog choose some Module with many functions (vertical scrollbar has to be visible) and choose function at the bottom (name of the function must be selected, sometime you must twice doubleclick on it)
2) click to the basic code and write something (for example REM)
3) catch by mouse the scrollbar in Object Catalog and move it to the top
4) click on the top function
and it jumps somewhere to the middle
Operation is also in the PNG file.

Bug is apparently in all versions 5.x. (I remembered on 5.0.?, 5.2.6,x, 5.2.7.x, 5.3.?, 5.4.3.x)
Comment 1 Buovjaga 2017-12-16 16:22:18 UTC
No problem.

Please copy and paste here the contents of your Help - About. This allows us to know more about your system.

Set to NEEDINFO.
Change back to UNCONFIRMED after you have provided the information.

Version: 5.4.3.2 (x64)
Build ID: 92a7159f7e4af62137622921e809f8546db437e5
CPU threads: 4; OS: Windows 6.19; UI render: default; 
Locale: fi-FI (fi_FI); Calc: group
Comment 2 Kamil Landa 2017-12-17 11:42:03 UTC
Verze: 5.4.3.2 (x64)
ID sestavení: 92a7159f7e4af62137622921e809f8546db437e5
Vlákna CPU: 2; OS: Windows 6.1; Vykreslování UI: výchozí; 
Národní prostředí: cs-CZ (cs_CZ); Calc: CL
Comment 3 Xisco Faulí 2018-11-27 13:35:34 UTC
Hello Kamil Landa,
Could you please try to reproduce it with the latest version of LibreOffice
from https://www.libreoffice.org/download/libreoffice-fresh/ ?
I have set the bug's status to 'NEEDINFO'. Please change it back to
'UNCONFIRMED' if the bug is still present in the latest version.
Comment 4 Kamil Landa 2018-11-28 10:13:23 UTC
Bug is still present

Verze: 6.1.3.2 (x64)
ID sestavení: 86daf60bf00efa86ad547e59e09d6bb77c699acb
Vlákna CPU: 2; OS: Windows 6.1; Vykreslování UI: výchozí; 
Národní prostředí: cs-CZ (cs_CZ); Calc: CL
Comment 5 Xisco Faulí 2019-05-28 10:42:15 UTC
Hello Kamil Landa,
A new major release of LibreOffice is available since this bug was reported.
Could you please try to reproduce it with the latest version of LibreOffice
from https://www.libreoffice.org/download/libreoffice-fresh/ ?
I have set the bug's status to 'NEEDINFO'. Please change it back to
'UNCONFIRMED' if the bug is still present in the latest version.
Comment 6 Kamil Landa 2019-06-04 08:41:20 UTC
Bug is still present

Verze: 6.2.4.1 (x64)
ID sestavení: 170a9c04e0ad25cd937fc7a913bb06bf8c75c11d
Vlákna CPU: 8; OS: Windows 10.0; Vykreslování UI: výchozí; VCL: win; 
Národní prostředí: cs-CZ (cs_CZ); Jazyk UI: cs-CZ
Calc: threaded

Verze: 6.3.0.0.beta1 (x64)
ID sestavení: a187af327633f5f00363be5131bd21a13e0f1a7b
Vlákna CPU: 8; OS: Windows 10.0; Vykreslování UI: GL; VCL: win; 
Národní prostředí: cs-CZ (cs_CZ); Jazyk UI: cs-CZ
Calc: threaded
Comment 7 Xisco Faulí 2019-10-21 12:21:02 UTC
Hello Kamir,
To be certain the reported issue is not
related to corruption in the user profile, could you please reset your
Libreoffice profile ( https://wiki.documentfoundation.org/UserProfile ) and
re-test?

I have set the bug's status to 'NEEDINFO'. Please change it back to
'UNCONFIRMED' if the issue is still present
Comment 8 Kamil Landa 2019-10-21 15:51:52 UTC
I reseted my Libre profile and re-tested it and bug is still present. 

Verze: 6.2.8.2 (x64)
ID sestavení: f82ddfca21ebc1e222a662a32b25c0c9d20169ee
Vlákna CPU: 8; OS: Windows 10.0; Vykreslování UI: výchozí; VCL: win; 
Národní prostředí: cs-CZ (cs_CZ); Jazyk UI: cs-CZ
Calc: CL
Comment 9 Xisco Faulí 2020-05-11 07:36:50 UTC
Hello Kamil,
A new major release of LibreOffice is available since this bug was reported.
Could you please try to reproduce it with the latest version of LibreOffice
from https://www.libreoffice.org/download/libreoffice-fresh/ ?
I have set the bug's status to 'NEEDINFO'. Please change it back to
'UNCONFIRMED' if the bug is still present in the latest version.
Comment 10 Kamil Landa 2020-05-11 08:42:22 UTC
Bug is still present.
Verze: 6.4.4.1 (x64)
ID sestavení: b50bc319eca5cd5b66fbfe2ebd0d3bd1eed099b5
Vlákna CPU: 8; OS: Windows 10.0 Build 17763; Vykreslování UI: výchozí; VCL: win; 
Národní prostředí: cs-CZ (cs_CZ); Jazyk UI: cs-CZ
Calc: threaded

Bug is also in:
Version: 7.0.0.0.alpha1 (x64)
Build ID: 6a03b2a54143a9bc0c6d4c7f1...
Vlákna CPU: 8; OS: Windows 10.0 Build 17763; Vykreslování UI: Skia/Vulkan; VCL: win; 
Locale: cs-CZ (cs_CZ); UI: cs-CZ
Calc: threaded
Comment 11 Xisco Faulí 2020-05-11 14:27:40 UTC
Please attach a sample document, as this makes it easier for us to verify the bug. 
I have set the bug's status to 'NEEDINFO'. Please change it back to 'UNCONFIRMED' once the requested document is provided.
(Please note that the attachment will be public, remove any sensitive information before attaching it. 
See https://wiki.documentfoundation.org/QA/FAQ#How_can_I_eliminate_confidential_data_from_a_sample_document.3F for help on how to do so.)
Comment 12 Kamil Landa 2020-05-12 10:00:03 UTC
Created attachment 160717 [details]
ODT with long list of macros, and video with bug

Example with ODT and video with bug

Version: 7.0.0.0.alpha1 (x64)
Build ID: 6a03b2a54143a9bc0c6d4c7f1...
Vlákna CPU: 8; OS: Windows 10.0 Build 17763; Vykreslování UI: Skia/Vulkan; VCL: win; 
Locale: cs-CZ (cs_CZ); UI: cs-CZ
Calc: threaded
Comment 13 Buovjaga 2020-05-14 18:51:07 UTC
I repro with the document in attachment 160717 [details]
This is something that seems to have been fixed at some point and reappeared.

1. Tools - Macros - Organize - Basic
2. Edit something to open the IDE
3. In the Object Catalog, expand example-with-macros.odt down to Module1
4. Double-click specialCaller3 to edit it
5. Scroll in the Catalog down to the bottom, double-click vlozeniRegPauz

Focus in the Catalog jumps away from the macro you just started editing.

Repro on Win & Linux.

Bibisected with Win 6.5 repo to 
https://git.libreoffice.org/core/+/9fd9da5739f5a99330af5601cd0a3a257f9dc529%5E!/
tdf#130161 adding a document dialog or modules doesn't update catalog

Adding Cc: to Caolán McNamara
Comment 14 Caolán McNamara 2020-05-19 10:11:43 UTC
on the source window losing focus the content updates. But it looks like the lose focus is happening during the mouse up/down of the list so they trample over eachother
Comment 15 Caolán McNamara 2020-05-19 10:20:42 UTC
if we defer that update out until the next event loop it seems to work much better
Comment 16 Commit Notification 2020-05-19 11:58:24 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1f209723cb294559f6f6bbb42d9db7b78a3b5a61

Resolves: tdf#114258 defer LoseFocus treeview update

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 Caolán McNamara 2020-05-19 12:03:40 UTC
that seems to solve it as far as I can see
Comment 18 Buovjaga 2020-05-19 17:37:11 UTC
(In reply to Caolán McNamara from comment #17)
> that seems to solve it as far as I can see

Verified, thanks!

Arch Linux 64-bit
Version: 7.0.0.0.alpha1+
Build ID: 809ddff82dc9a28051d8f6b0d6513b1824ba0ab9
CPU threads: 8; OS: Linux 5.6; UI render: default; VCL: kf5; 
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 19 May 2020
Comment 19 Commit Notification 2020-05-21 11:29:10 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/1f628d9e1b118741093c0748686bd71223ef2364

Resolves: tdf#114258 defer LoseFocus treeview update

It will be available in 6.4.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.