Resolves: tdf#114258 defer LoseFocus treeview update

until the next event cycle in cas the LoseFocus is happening due to an
in-progress selection event from a  mouse down in the treeview that would be
updated

Change-Id: Ia4448aa798a8af7cd35bc17215891f6c5ca8678a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/94494
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>